#24 토론 게시글 CRUD 리펙토링 (#25)
* refactor: @RequestParam name 설정

* refactor: 페이징 기능 수정

- 의미 없는 로직 제거

* refactor: merge 후 Discussion CRUD 및 검색 기능 로직 수정

* feat: 홈 화면 구현

* chore: 불필요한 로깅 제거

* chore: eof 문제 해결